<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/colorBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Inscription"
            android:textColor="@color/colorText"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxBackgroundColor="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nom_d_utilisateurs"
                android:inputType="textPersonName"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"
                android:padding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxBackgroundColor="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/usernameInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"
                android:padding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxBackgroundColor="@android:color/transparent"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mot_de_passe"
                android:inputType="textPassword"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"
                android:padding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxBackgroundColor="@android:color/transparent"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmez_le_mot_de_passe"
                android:inputType="textPassword"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"
                android:padding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/s_inscrires"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmPasswordInputLayout" />

        <!-- Already have account / login -->
        <TextView
            android:id="@+id/textViewAlreadyAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d_j_un_compte_se_connecter"
            android:textColor="@color/colorLiens"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toBottomOf="@id/registerButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
